# pychub

./: .chubconfig  .gitignore  .gitlab-ci.yml  README.md  USER_GUIDE.md  pyproject.toml  pytest.ini  setup.py
.github/actions/python-poetry/: action.yml
.github/workflows/: workflow.yml
docs/: USER_GUIDE.md
src/pychub/helper/: multiformat_deserializable_mixin.py  multiformat_serializable_mixin.py  strategy_loader.py  stream.py  sys_check_utils.py  toml_utils.py
src/pychub/model/: build_event.py  buildplan_model.py  chubconfig_model.py  chubproject_model.py  chubproject_provenance_model.py  compatibility_resolution_model.py  compatibility_spec_model.py  dataclass_shim.py  includes_model.py  project_context.py  scripts_model.py  wheelinfo_model.py  wheels_model.py
src/pychub/package/: bt_options_processor.py  chubproject.py  cli.py  compatibility.py  context_vars.py  main.py  packager.py
src/pychub/package/lifecycle/execute/: bundler.py  executor.py  metadata.py  stage_includes.py  stage_runtime.py  stage_scripts.py  stage_wheels.py
src/pychub/package/lifecycle/init/: immediate_operations.py  initializer.py
src/pychub/package/lifecycle/plan/: compatibility.py  planner.py
src/pychub/package/lifecycle/plan/audit/: audit_emitter.py
src/pychub/package/lifecycle/plan/compatibility/: compatibility_evaluator.py  compatibility_spec_loader.py
src/pychub/package/lifecycle/plan/dep_resolution/: path_deps_resolver.py  wheel_resolver.py  wheel_stager.py
src/pychub/package/lifecycle/plan/dep_resolution/pathdeps/: __init__.py  default_path_strategy.py  default_strategy.py  hatch.py  hatch_path_strategy.py  path_dep_strategy_base.py  pdm.py  pdm_path_strategy.py  poetry.py  poetry_path_strategy.py  project_path_strategy_base.py  project_path_strategy_registry.py
src/pychub/package/lifecycle/plan/dep_resolution/wheeldeps/: index_resolution_strategy.py  local_resolution_strategy.py  path_resolution_strategy.py  wheel_resolution_strategy_base.py  wheel_resolution_strategy_registry.py
src/pychub/package/lifecycle/plan/resource_resolution/: resource_resolver.py  resource_stager.py
src/pychub/package/pathdeps/: __init__.py  default_strategy.py  discover.py  hatch.py  pdm.py  poetry.py
src/pychub/runtime/: __main__.py  cli.py  rt_options_processor.py  runtime_options_processor.py  utils.py
src/pychub/runtime/actions/: discover.py  entrypoint.py  install.py  install_hooks.py  list.py  runtime_main.py  show_compatibility.py  unpack.py  venv.py  version.py
src/pychubby/: cli.py  constants.py  packager.py
src/pychubby/model/: chubconfig_model.py  chubproject_model.py  includes_model.py  scripts_model.py  wheelinfo_model.py
src/pychubby/package/: bt_options_processor.py  chubproject.py  cli.py  packager.py
src/pychubby/runtime/: __main__.py  cli.py  constants.py  options_processor.py  utils.py
src/pychubby/runtime/actions/: chubconfig.py  discover.py  entrypoint.py  install.py  install_hooks.py  list.py  post_install.py  runtime_main.py  unpack.py  venv.py  version.py
tests/: conftest.py  test_post_install.py  test_runtime_main.py  test_venv.py  utils.py
tests/integration/: _asserts.py  _factories.py  conftest.py  test_build_integration.py  test_runtime_integration.py
tests/integration/runtime/: test_chubconfig_integration.py  test_chubproject_integration.py  test_errors_integration.py  test_output_integration.py  test_run_exec_integration.py  test_scripts_integration.py  test_select_integration.py  test_unpack_integration.py  test_venv_integration.py
tests/integration/utils/: build_helpers.py
tests/test_data/: show_wheelinfo.py  valid_chubproject.toml  wheelinfo.json
tests/test_proj/: build.audit.json  chubproject.toml  pyproject.toml
tests/test_proj/includes/: info.txt  test.cfg
tests/test_proj/scripts/: post_install.sh  pre_check.sh
tests/test_proj/test_pkg/: greet.py
tests/unit/: conftest.py  test_chubconfig.py  test_chubproject.py  test_discover.py  test_entrypoint.py  test_instal_hooksl.py  test_install.py  test_install_hooks.py  test_list.py  test_packager.py  test_runtime_main.py  test_unpack.py  test_venv.py  test_version.py  test_wheelinfo.py
tests/unit/helper/: test_stream.py
tests/unit/model/: test_chubconfig_model.py  test_chubproject_model.py  test_dataclass_shim.py  test_includes_model.py  test_wheelinfo_model.py
tests/unit/package/: test_bt_options_processor.py  test_build_options_processor.py  test_chubproject.py  test_compatibility.py  test_package_cli.py  test_packager.py  test_packaging_main.py
tests/unit/package/lifecycle/execute/: test_bundler.py
tests/unit/package/lifecycle/init/: test_initializer.py
tests/unit/package/lifecycle/plan/: test_planner.py
tests/unit/package/lifecycle/plan/audit/: test_audit_emitter.py
tests/unit/package/lifecycle/plan/dep_resolution/: test_path_deps_resolver.py  test_wheel_resolver.py  test_wheel_stager.py
tests/unit/package/lifecycle/plan/dep_resolution/pathdeps/: test_default_strategy.py  test_hatch_strategy.py  test_pdm_strategy.py  test_poetry_strategy.py
tests/unit/package/lifecycle/plan/dep_resolution/wheeldeps/: test_index_resolution_strategy.py  test_path_resolution_strategy.py
tests/unit/package/lifecycle/plan/resource_resolution/: test_resource_stager.py
tests/unit/package/pathdeps/: test_default_strategy.py  test_discover.py  test_hatch_strategy.py  test_pdm_strategy.py  test_poetry_strategy.py
tests/unit/runtime/: test_main.py  test_rt_options_processor.py  test_runtime_cli.py  test_utils.py
tests/unit/runtime/actions/: test_chubconfig.py  test_entrypoint.py  test_install.py  test_install_hooks.py  test_list.py  test_runtime_main.py  test_show_compatibility.py  test_venv.py  test_version.py
