[tool.poetry]
name = "pychubby"
version = "0.1.0"
description = "Make a Python-native .chub installer from a wheelhouse."
authors = ["Steve Storck <steve973@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pychubby", from = "src" }
]
license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.9"
pyyaml = "^6.0.2"
pytest = "^8.4.1"
attrs = "^25.3.0"

[tool.poetry.scripts]
pychubby = "pychubby.package.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
