[build-system]
requires = ["poetry-core>=2.2.1"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pychub"
version = "2.0.0"
description = "Make a Python-native .chub installer from wheels and their dependencies."
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = { file = "LICENSE" }
authors = [
    { name = "Steve Storck", email = "steve973@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities"
]
keywords = [
    "bundle",
    "chub",
    "executable",
    "package",
    "packaging",
    "zipapp"
]

[project.urls]
Homepage = "https://github.com/Steve973/pychub"
Source = "https://github.com/Steve973/pychub/tree/main"
Changelog = "https://github.com/Steve973/pychub/blob/main/CHANGELOG.md"
ReleaseNotes = "https://github.com/Steve973/pychub/blob/main/RELEASE_NOTES.md"

[project.scripts]
pychub = "pychub.package.cli:main"

[tool.poetry]
packages = [{ include = "pychub", from = "src" }]

[tool.poetry.dependencies]
pyyaml = ">=6.0.3"
attrs = ">=25.3.0"
tomli = { version = ">=2.2", markers = "python_version < '3.11'" }
tomli-w = ">=1.2.0"
packaging = ">=25.0"
requests = ">=2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.1"
pytest-cov = ">=7.0.0"

[tool.pytest.ini_options]
addopts = ["-ra", "-q", "--import-mode=importlib"]
testpaths = ["."]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')"
]
