[tool.poetry]
name = "test-pkg"
version = "0.1.0"
description = "A test package for pychubby integration tests"
authors = ["Test Author <test@example.com>"]
packages = [{ include = "test_pkg" }]

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^23.2.0"

[tool.poetry.scripts]
test-pkg-cli = "test_pkg.greet:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
