[tool.poetry]
name = "test-pkg"
version = "0.1.0"
description = "A test package for pychub integration tests"
authors = ["Test Author <test@example.com>"]
packages = [{ include = "test_pkg" }]

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^23.2.0"
packaging = ">=21.3"            # tiny, pure
tomli-w = ">=1.0.0"             # tiny, pure
text-unidecode = ">=1.3"        # tiny, pure
cffi = ">=1.16.0"               # native extension, common use
pyyaml = ">=6.0.1"              # native, medium-size
orjson = ">=3.9.0"              # Rust, CPython-specific
pydantic = ">=2.4.0"

[tool.poetry.scripts]
test-pkg-cli = "test_pkg.greet:main"

[build-system]
requires = ["poetry-core>=2.2.1"]
build-backend = "poetry.core.masonry.api"
